--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
   <meta charset="utf-8">
+  <title>Bootstrap Example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -13,28 +13,19 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div id="container" class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <a class="navbar-brand" href="#">Aldo Colombo</a>
-        </div>
-        <div class="col-lg-3"></div>
-        <div class="col-lg-3">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <div id="container" class="container d-flex justify-content-between">
+      <a class="navbar-brand" href="#">Aldo Colombo</a>
+      <ul class="navbar-nav mb-2 mb-lg-0 d-flex">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -70,7 +61,35 @@
       <div class="col-lg-4"></div>
     </div>
   </div>
-
+  <section class="container">
+    <div class="row">
+      <div class="col-4">
+        <h2>My Recent Works</h2>
+      </div>
+      <div class="col-8"><hr></div>
+    </div>
+  </section>
+  <section class="container">
+    <div class="row">
+      <div class="col-xl-8"><img src="img/ImgPlaceholder.png" alt="Gymfit Excercise"></div>
+      <div class="col-xl-4">
+        <h2>Multi-Post Stories</h2>
+        <p>A daily selection of privately personalized reads;
+          no accounts or sign-ups required.
+          has been the industry's standard dummy text ever since the 1500s,
+          when an unknown printer took a standard dummy text.
+        </p>
+        <ul>
+          <li>css</li>
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <a href="#multi-post-stories">See Project</a>
+      </div>
+    </div>
+  </section>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
