--- a/index.html
+++ b/index.html
@@ -64,32 +64,99 @@
   <section class="container">
     <div class="row">
       <div class="col-4">
-        <h2>My Recent Works</h2>
+        <h2 class="display-5 text-center">My Recent Works</h2>
       </div>
-      <div class="col-8"><hr></div>
+      <div class="col-8 mt-2 pb-5">
+        <hr>
+      </div>
     </div>
   </section>
-  <section class="container">
+  <section class="container pb-5">
     <div class="row">
       <div class="col-xl-8"><img src="img/ImgPlaceholder.png" alt="Gymfit Excercise"></div>
       <div class="col-xl-4">
-        <h2>Multi-Post Stories</h2>
-        <p>A daily selection of privately personalized reads;
+        <h2 class="display-6 pb-4">Multi-Post Stories</h2>
+        <p class="h5 pb-4">A daily selection of privately personalized reads;
           no accounts or sign-ups required.
           has been the industry's standard dummy text ever since the 1500s,
           when an unknown printer took a standard dummy text.
         </p>
-        <ul>
-          <li>css</li>
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
+        <ul class="container pb-4 ps-0 pe-0 d-flex justify-content-start">
+          <li class="ps-3 pe-3 pt-2 pb-2 me-2">css</li>
+          <li class="ps-3 pe-3 pt-2 pb-2 me-2">html</li>
+          <li class="ps-3 pe-3 pt-2 pb-2 me-2">bootstrap</li>
+          <li class="ps-3 pe-3 pt-2 pb-2 me-2">Ruby</li>
         </ul>
-        <a href="#multi-post-stories">See Project</a>
+        <button type="button" class="btn btn-danger rounded-0">See Project</button>
       </div>
     </div>
   </section>
-  
+
+  <div class="container pt-5 d-flex flex-wrap justify-content-between">
+
+    <div class="card mb-5">
+      <img src=" img/background.png" class="card-img-top" alt="background image">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    <div class="card mb-5">
+      <img src="img/background.png" class="card-img-top" alt="background image">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    <div class="card mb-5">
+      <img src="img/background.png" class="card-img-top" alt="background image">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    <div class="card mb-5">
+      <img src="img/background.png" class="card-img-top" alt="background image">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="img/background.png" class="card-img-top" alt="background image">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="img/background.png" class="card-img-top" alt="background image">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
