--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
       <div class="col-lg-1 my-auto">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#"><img src="img/Icon-GitHub.png" alt="Github"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#"><img src="img/Icon-Linkedin.png" alt="Linkedin"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#"><img src="img/Icon-Angelist.png" alt="Angelist"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#"><img src="img/Icon-Twitter.png" alt="Twitter"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#"><img src="img/Icon-Medium.png" alt="Medium"></a>
           </li>
         </ul>
       </div>
@@ -153,8 +153,6 @@
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-
-
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
