correct li border problem

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
           when an unknown printer took a standard dummy text.
         </p>
         <ul class="container pb-4 ps-0 pe-0 d-flex justify-content-start">
-          <li class="ps-3 pe-3 pt-2 pb-2 me-2">css</li>
-          <li class="ps-3 pe-3 pt-2 pb-2 me-2">html</li>
-          <li class="ps-3 pe-3 pt-2 pb-2 me-2">bootstrap</li>
-          <li class="ps-3 pe-3 pt-2 pb-2 me-2">Ruby</li>
+          <li class="myboxed ps-3 pe-3 pt-2 pb-2 me-2">css</li>
+          <li class="myboxed ps-3 pe-3 pt-2 pb-2 me-2">html</li>
+          <li class="myboxed ps-3 pe-3 pt-2 pb-2 me-2">bootstrap</li>
+          <li class="myboxed ps-3 pe-3 pt-2 pb-2 me-2">Ruby</li>
         </ul>
         <button type="button" class="btn btn-danger rounded-0">See Project</button>
       </div>
